--- a/index.html
+++ b/index.html
@@ -16,95 +16,110 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__wrapper--normal header__wrapper--wider">
-        <h1 class="header__h1"><img src="" alt="Inicio" class="header__img" /></h1>
-        <div class="header__div menu">
-          <ul class="menu__ul">
-            <li class="menu__li">Tendencias</li>
-            <li class="menu__li">Reservas</li>
-            <li class="menu__li">Próximos lanzamientos</li>
-            <li class="menu__li">Soporte 24/7</li>
-          </ul>
-          <nav class="menu__nav navmenu">
-            <ul class="navmenu__ul">
-              <li class="navmenu__li">
-                <a class="navmenu__a" href="#">
-                  <svg class="navmenu__svg--pc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z" />
-                  </svg>
-                  <span class="navmenu__span">PC</span>
-                  <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                  </svg>
-                </a>
-              </li>
-              <li class="navmenu__li">
-                <a class="navmenu__a" href="#">
-                  <svg class="navmenu__svg--ps" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path d="M15.858 11.451c-.313.395-1.079.676-1.079.676l-5.696 2.046v-1.509l4.192-1.493c.476-.17.549-.412.162-.538-.386-.127-1.085-.09-1.56.08l-2.794.984v-1.566l.161-.054s.807-.286 1.942-.412c1.135-.125 2.525.017 3.616.43 1.23.39 1.368.962 1.056 1.356ZM9.625 8.883v-3.86c0-.453-.083-.87-.508-.988-.326-.105-.528.198-.528.65v9.664l-2.606-.827V2c1.108.206 2.722.692 3.59.985 2.207.757 2.955 1.7 2.955 3.825 0 2.071-1.278 2.856-2.903 2.072Zm-8.424 3.625C-.061 12.15-.271 11.41.304 10.984c.532-.394 1.436-.69 1.436-.69l3.737-1.33v1.515l-2.69.963c-.474.17-.547.411-.161.538.386.126 1.085.09 1.56-.08l1.29-.469v1.356l-.257.043a8.454 8.454 0 0 1-4.018-.323Z" />
-                  </svg>
-                  <span class="navmenu__span">Playstation</span>
-                  <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                  </svg>
-                </a>
-              </li>
-              <li class="navmenu__li">
-                <a class="navmenu__a" href="#">
-                  <svg class="navmenu__svg--xbox" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path
-                      d="M7.202 15.967a7.987 7.987 0 0 1-3.552-1.26c-.898-.585-1.101-.826-1.101-1.306 0-.965 1.062-2.656 2.879-4.583C6.459 7.723 7.897 6.44 8.052 6.475c.302.068 2.718 2.423 3.622 3.531 1.43 1.753 2.088 3.189 1.754 3.829-.254.486-1.83 1.437-2.987 1.802-.954.301-2.207.429-3.239.33Zm-5.866-3.57C.589 11.253.212 10.127.03 8.497c-.06-.539-.038-.846.137-1.95.218-1.377 1.002-2.97 1.945-3.95.401-.417.437-.427.926-.263.595.2 1.23.638 2.213 1.528l.574.519-.313.385C4.056 6.553 2.52 9.086 1.94 10.653c-.315.852-.442 1.707-.306 2.063.091.24.007.15-.3-.319Zm13.101.195c.074-.36-.019-1.02-.238-1.687-.473-1.443-2.055-4.128-3.508-5.953l-.457-.575.494-.454c.646-.593 1.095-.948 1.58-1.25.381-.237.927-.448 1.161-.448.145 0 .654.528 1.065 1.104a8.372 8.372 0 0 1 1.343 3.102c.153.728.166 2.286.024 3.012a9.495 9.495 0 0 1-.6 1.893c-.179.393-.624 1.156-.82 1.404-.1.128-.1.127-.043-.148ZM7.335 1.952c-.67-.34-1.704-.705-2.276-.803a4.171 4.171 0 0 0-.759-.043c-.471.024-.45 0 .306-.358A7.778 7.778 0 0 1 6.47.128c.8-.169 2.306-.17 3.094-.005.85.18 1.853.552 2.418.9l.168.103-.385-.02c-.766-.038-1.88.27-3.078.853-.361.176-.676.316-.699.312a12.246 12.246 0 0 1-.654-.319Z" />
-                  </svg>
-                  <span class="navmenu__span">Xbox</span>
-                  <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                  </svg>
-                </a>
-              </li>
-              <li class="navmenu__li">
-                <a class="navmenu__a" href="#">
-                  <svg class="navmenu__svg--nintendo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path d="M9.34 8.005c0-4.38.01-7.972.023-7.982C9.373.01 10.036 0 10.831 0c1.153 0 1.51.01 1.743.05 1.73.298 3.045 1.6 3.373 3.326.046.242.053.809.053 4.61 0 4.06.005 4.537-.123 4.976-.022.076-.048.15-.08.242a4.136 4.136 0 0 1-3.426 2.767c-.317.033-2.889.046-2.978.013-.05-.02-.053-.752-.053-7.979Zm4.675.269a1.621 1.621 0 0 0-1.113-1.034 1.609 1.609 0 0 0-1.938 1.073 1.9 1.9 0 0 0-.014.935 1.632 1.632 0 0 0 1.952 1.107c.51-.136.908-.504 1.11-1.028.11-.285.113-.742.003-1.053M3.71 3.317c-.208.04-.526.199-.695.348-.348.301-.52.729-.494 1.232.013.262.03.332.136.544.155.321.39.556.712.715.222.11.278.123.567.133.261.01.354 0 .53-.06.719-.242 1.153-.94 1.03-1.656-.142-.852-.95-1.422-1.786-1.256Z" />
-                    <path d="M3.425.053a4.136 4.136 0 0 0-3.28 3.015C0 3.628-.01 3.956.005 8.3c.01 3.99.014 4.082.08 4.39.368 1.66 1.548 2.844 3.224 3.235.22.05.497.06 2.29.07 1.856.012 2.048.009 2.097-.04.05-.05.053-.69.053-7.94 0-5.374-.01-7.906-.033-7.952-.033-.06-.09-.063-2.03-.06-1.578.004-2.052.014-2.26.05Zm3 14.665-1.35-.016c-1.242-.013-1.375-.02-1.623-.083a2.81 2.81 0 0 1-2.08-2.167c-.074-.335-.074-8.579-.004-8.907a2.845 2.845 0 0 1 1.716-2.05c.438-.176.64-.196 2.058-.2l1.282-.003v13.426Z" />
-                  </svg>
-                  <span class="navmenu__span">Nintendo</span>
-                  <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                  </svg>
-                </a>
-              </li>
+      <div class="header__wrapper--normal">
+        <div class="header__div">
+          <h1 class="header__h1"><img class="header__img" src="/assets/img/logo-horizontal.svg" alt="Inicio" /></h1>
+          <div class="header__column menu">
+            <ul class="menu__ul">
+              <li class="menu__li"><a href="" class="menu__a">Tendencias</a></li>
+              <li class="menu__li"><a href="" class="menu__a">Reservas</a></li>
+              <li class="menu__li"><a href="" class="menu__a">Próximos lanzamientos</a></li>
+              <li class="menu__li"><a href="" class="menu__a">Soporte 24/7</a></li>
             </ul>
-            <div class="navmenu__search">
-              <svg class="navmenu__svg--magnify" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+            <nav class="menu__nav navmenu">
+              <ul class="navmenu__ul">
+                <li class="navmenu__li">
+                  <a class="navmenu__a" href="#">
+                    <svg class="navmenu__svg--pc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z" />
+                    </svg>
+                    <span class="navmenu__span">PC</span>
+                    <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="navmenu__li">
+                  <a class="navmenu__a" href="#">
+                    <svg class="navmenu__svg--ps" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path d="M15.858 11.451c-.313.395-1.079.676-1.079.676l-5.696 2.046v-1.509l4.192-1.493c.476-.17.549-.412.162-.538-.386-.127-1.085-.09-1.56.08l-2.794.984v-1.566l.161-.054s.807-.286 1.942-.412c1.135-.125 2.525.017 3.616.43 1.23.39 1.368.962 1.056 1.356ZM9.625 8.883v-3.86c0-.453-.083-.87-.508-.988-.326-.105-.528.198-.528.65v9.664l-2.606-.827V2c1.108.206 2.722.692 3.59.985 2.207.757 2.955 1.7 2.955 3.825 0 2.071-1.278 2.856-2.903 2.072Zm-8.424 3.625C-.061 12.15-.271 11.41.304 10.984c.532-.394 1.436-.69 1.436-.69l3.737-1.33v1.515l-2.69.963c-.474.17-.547.411-.161.538.386.126 1.085.09 1.56-.08l1.29-.469v1.356l-.257.043a8.454 8.454 0 0 1-4.018-.323Z" />
+                    </svg>
+                    <span class="navmenu__span">Playstation</span>
+                    <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="navmenu__li">
+                  <a class="navmenu__a" href="#">
+                    <svg class="navmenu__svg--xbox" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path
+                        d="M7.202 15.967a7.987 7.987 0 0 1-3.552-1.26c-.898-.585-1.101-.826-1.101-1.306 0-.965 1.062-2.656 2.879-4.583C6.459 7.723 7.897 6.44 8.052 6.475c.302.068 2.718 2.423 3.622 3.531 1.43 1.753 2.088 3.189 1.754 3.829-.254.486-1.83 1.437-2.987 1.802-.954.301-2.207.429-3.239.33Zm-5.866-3.57C.589 11.253.212 10.127.03 8.497c-.06-.539-.038-.846.137-1.95.218-1.377 1.002-2.97 1.945-3.95.401-.417.437-.427.926-.263.595.2 1.23.638 2.213 1.528l.574.519-.313.385C4.056 6.553 2.52 9.086 1.94 10.653c-.315.852-.442 1.707-.306 2.063.091.24.007.15-.3-.319Zm13.101.195c.074-.36-.019-1.02-.238-1.687-.473-1.443-2.055-4.128-3.508-5.953l-.457-.575.494-.454c.646-.593 1.095-.948 1.58-1.25.381-.237.927-.448 1.161-.448.145 0 .654.528 1.065 1.104a8.372 8.372 0 0 1 1.343 3.102c.153.728.166 2.286.024 3.012a9.495 9.495 0 0 1-.6 1.893c-.179.393-.624 1.156-.82 1.404-.1.128-.1.127-.043-.148ZM7.335 1.952c-.67-.34-1.704-.705-2.276-.803a4.171 4.171 0 0 0-.759-.043c-.471.024-.45 0 .306-.358A7.778 7.778 0 0 1 6.47.128c.8-.169 2.306-.17 3.094-.005.85.18 1.853.552 2.418.9l.168.103-.385-.02c-.766-.038-1.88.27-3.078.853-.361.176-.676.316-.699.312a12.246 12.246 0 0 1-.654-.319Z" />
+                    </svg>
+                    <span class="navmenu__span">Xbox</span>
+                    <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="navmenu__li">
+                  <a class="navmenu__a" href="#">
+                    <svg class="navmenu__svg--nintendo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path d="M9.34 8.005c0-4.38.01-7.972.023-7.982C9.373.01 10.036 0 10.831 0c1.153 0 1.51.01 1.743.05 1.73.298 3.045 1.6 3.373 3.326.046.242.053.809.053 4.61 0 4.06.005 4.537-.123 4.976-.022.076-.048.15-.08.242a4.136 4.136 0 0 1-3.426 2.767c-.317.033-2.889.046-2.978.013-.05-.02-.053-.752-.053-7.979Zm4.675.269a1.621 1.621 0 0 0-1.113-1.034 1.609 1.609 0 0 0-1.938 1.073 1.9 1.9 0 0 0-.014.935 1.632 1.632 0 0 0 1.952 1.107c.51-.136.908-.504 1.11-1.028.11-.285.113-.742.003-1.053M3.71 3.317c-.208.04-.526.199-.695.348-.348.301-.52.729-.494 1.232.013.262.03.332.136.544.155.321.39.556.712.715.222.11.278.123.567.133.261.01.354 0 .53-.06.719-.242 1.153-.94 1.03-1.656-.142-.852-.95-1.422-1.786-1.256Z" />
+                      <path d="M3.425.053a4.136 4.136 0 0 0-3.28 3.015C0 3.628-.01 3.956.005 8.3c.01 3.99.014 4.082.08 4.39.368 1.66 1.548 2.844 3.224 3.235.22.05.497.06 2.29.07 1.856.012 2.048.009 2.097-.04.05-.05.053-.69.053-7.94 0-5.374-.01-7.906-.033-7.952-.033-.06-.09-.063-2.03-.06-1.578.004-2.052.014-2.26.05Zm3 14.665-1.35-.016c-1.242-.013-1.375-.02-1.623-.083a2.81 2.81 0 0 1-2.08-2.167c-.074-.335-.074-8.579-.004-8.907a2.845 2.845 0 0 1 1.716-2.05c.438-.176.64-.196 2.058-.2l1.282-.003v13.426Z" />
+                    </svg>
+                    <span class="navmenu__span">Nintendo</span>
+                    <svg class="navmenu__svg--arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              <div class="navmenu__search">
+                <svg class="navmenu__svg--magnify" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                </svg>
+              </div>
+            </nav>
+          </div>
+
+          <div class="menu__login login">
+            <a href="" class="login__a">
+              <svg class="login__svg--cart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
               </svg>
-            </div>
-          </nav>
-          <div class="menu__login">
-            <svg class="menu__svg--cart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-              <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
-            </svg>
-            <svg class="menu__svg--user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-              <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-            </svg>
+            </a>
+            <a href="" class="login__a">
+              <svg class="login__svg--user" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+              </svg>
+            </a>
           </div>
         </div>
       </div>
     </header>
     <main class="main">
-      <picture class="parallax__picture">
-        <div class="background__div"></div>
-        <source srcset="/assets/img/homeBanner/campaign-banner-400x250.jpg" media="(max-width: 400px)" />
-        <source srcset="/assets/img/homeBanner/campaign-banner-500x270.jpg" media="(max-width: 500px)" />
-        <source srcset="/assets/img/homeBanner/campaign-banner-700x300.jpg" media="(max-width: 700px)" />
-        <source srcset="/assets/img/homeBanner/campaign-banner-1000x350.jpg" media="(max-width: 100px)" />
-        <source srcset="/assets/img/homeBanner/campaign-banner-1400x500.jpg" media="(max-width: 1400px)" />
-        <source srcset="/assets/img/homeBanner/campaign-banner-1920x620.jpg" media="(max-width: 1920px)" />
-        <img src="/assets/img/homeBanner/campaign-banner.jpg" alt="" />
-      </picture>
-      <a class="background__a" href="https://www.instant-gaming.com/promo/black-friday/"></a>
-      <section class="trends__section"></section>
+      <div class="background__div">
+        <a class="background__a" href="https://www.instant-gaming.com/promo/black-friday/">
+          <picture class="parallax__picture">
+            <source srcset="/assets/img/homeBanner/campaign-banner-400x250.jpg" media="(max-width: 400px)" />
+            <source srcset="/assets/img/homeBanner/campaign-banner-500x270.jpg" media="(max-width: 500px)" />
+            <source srcset="/assets/img/homeBanner/campaign-banner-700x300.jpg" media="(max-width: 700px)" />
+            <source srcset="/assets/img/homeBanner/campaign-banner-1000x350.jpg" media="(max-width: 100px)" />
+            <source srcset="/assets/img/homeBanner/campaign-banner-1400x500.jpg" media="(max-width: 1400px)" />
+            <source srcset="/assets/img/homeBanner/campaign-banner-1920x620.jpg" media="(max-width: 1920px)" />
+            <img src="/assets/img/homeBanner/campaign-banner.jpg" alt="" />
+          </picture>
+        </a>
+      </div>
+      <section class="trends__section">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dicta corporis eaque provident adipisci laboriosam distinctio, vitae necessitatibus consectetur explicabo minima, quasi odit expedita iusto deserunt consequatur corrupti delectus mollitia!
+        Cupiditate nesciunt dicta dolore sunt laboriosam omnis quia itaque saepe asperiores. Veniam aperiam amet impedit doloribus incidunt, excepturi qui inventore quae quos ea asperiores. Qui quia quae odio illo iure!
+        Maxime repudiandae ea tempore consequatur nisi voluptatibus enim provident vitae ut! Ipsa soluta deleniti sequi sunt ad officiis nisi earum repellat quibusdam sit rerum, magni obcaecati, suscipit, totam corrupti aliquam.
+        Praesentium in illo et unde itaque, tempore repudiandae earum placeat quos rem doloribus, rerum laborum eum corrupti ex consequuntur alias dolorum, quasi iusto reprehenderit autem quod obcaecati! Accusamus, laudantium nostrum.
+        Nisi error, totam cupiditate, deserunt fuga accusantium corrupti maxime voluptate nostrum nulla, unde hic aliquid dolorum modi natus rerum quidem soluta delectus et amet a. Pariatur dolores natus maxime optio!</p>
+      </section>
     </main>
   </body>
 </html>
