--- a/index.html
+++ b/index.html
@@ -114,11 +114,10 @@
         </a>
       </div>
       <section class="trends__section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dicta corporis eaque provident adipisci laboriosam distinctio, vitae necessitatibus consectetur explicabo minima, quasi odit expedita iusto deserunt consequatur corrupti delectus mollitia!
-        Cupiditate nesciunt dicta dolore sunt laboriosam omnis quia itaque saepe asperiores. Veniam aperiam amet impedit doloribus incidunt, excepturi qui inventore quae quos ea asperiores. Qui quia quae odio illo iure!
-        Maxime repudiandae ea tempore consequatur nisi voluptatibus enim provident vitae ut! Ipsa soluta deleniti sequi sunt ad officiis nisi earum repellat quibusdam sit rerum, magni obcaecati, suscipit, totam corrupti aliquam.
-        Praesentium in illo et unde itaque, tempore repudiandae earum placeat quos rem doloribus, rerum laborum eum corrupti ex consequuntur alias dolorum, quasi iusto reprehenderit autem quod obcaecati! Accusamus, laudantium nostrum.
-        Nisi error, totam cupiditate, deserunt fuga accusantium corrupti maxime voluptate nostrum nulla, unde hic aliquid dolorum modi natus rerum quidem soluta delectus et amet a. Pariatur dolores natus maxime optio!</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dicta corporis eaque provident adipisci laboriosam distinctio, vitae necessitatibus consectetur explicabo minima, quasi odit expedita iusto deserunt consequatur corrupti delectus mollitia! Cupiditate nesciunt dicta dolore sunt laboriosam omnis quia itaque saepe asperiores. Veniam aperiam amet impedit doloribus incidunt, excepturi qui inventore quae quos ea asperiores. Qui quia quae odio illo iure! Maxime repudiandae ea tempore consequatur nisi voluptatibus enim provident vitae ut! Ipsa soluta deleniti sequi sunt ad officiis nisi earum repellat quibusdam sit rerum, magni obcaecati, suscipit, totam corrupti aliquam. Praesentium in illo et unde itaque, tempore repudiandae earum placeat quos rem doloribus, rerum laborum eum corrupti ex consequuntur alias dolorum, quasi iusto reprehenderit autem quod obcaecati! Accusamus, laudantium nostrum. Nisi error, totam cupiditate, deserunt fuga accusantium corrupti maxime
+          voluptate nostrum nulla, unde hic aliquid dolorum modi natus rerum quidem soluta delectus et amet a. Pariatur dolores natus maxime optio!
+        </p>
       </section>
     </main>
   </body>
