--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Instant-Gaming.com - Tus juegos favoritos para Steam, Origin, Battle.net, Uplay y juegos Indie hasta el 70% de descuento! ¡Códigos digitales, entrega inmediata 24/7!" />
 
     <link rel="stylesheet" href="/css/index.css" />
+    <script src="/js/index.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,8 +77,15 @@
                 </li>
               </ul>
               <div class="navmenu__search">
+                <input type="text" class="navmenu__input" name="q" autocomplete="off" spellcheck="false" autocapitalize="off" itemprop="query-input" placeholder="Minecraft, RPG, multijugador..." />
+                <span class="navmenu__advanced">Búsqueda avanzada</span>
                 <svg class="navmenu__svg--magnify" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                </svg>
+              </div>
+              <div class="navmenu__close">
+                <svg class="navmenu__svg--close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
                 </svg>
               </div>
             </nav>
