--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                   </a>
                 </li>
               </ul>
+
               <div class="navmenu__search">
                 <input type="text" class="navmenu__input" name="q" autocomplete="off" spellcheck="false" autocapitalize="off" itemprop="query-input" placeholder="Minecraft, RPG, multijugador..." />
                 <span class="navmenu__advanced">Búsqueda avanzada</span>
@@ -85,10 +86,62 @@
               </div>
               <div class="navmenu__close">
                 <svg class="navmenu__svg--close" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
                 </svg>
               </div>
             </nav>
+            <div class="menu__div submenu">
+              <div class="submenu__platforms">
+                <a href="https://www.instant-gaming.com/es/pc/" class="submenu__link">Plataformas</a>
+                <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </div>
+              <ul class="submenu__grid grid">
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/steam/" class="grid__link"><img src="/assets/img/icon-stm.png" alt="Steam" class="grid__img" /><span class="grid__name">Steam</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/ubisoft-connect/" class="grid__link"><img src="/assets/img/icon-uplay.png" alt="Ubisoft Connect" class="grid__img" /><span class="grid__name">Ubisoft Connect</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/ea-app/" class="grid__link"><img src="/assets/img/icon-ea-app.png" alt="EA App" class="grid__img" /><span class="grid__name">EA App</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/battle-net/" class="grid__link"><img src="/assets/img/icon-battle-net.png" alt="Battle.net" class="grid__img" /><span class="grid__name">Battle.net</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/rockstar/" class="grid__link"><img src="/assets/img/icon-rock.png" alt="Rockstar" class="grid__img" /> <span class="grid__name">Rockstar</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/gog-com/" class="grid__link"><img src="/assets/img/icon-gog-com.png" alt="GOG.com" class="grid__img" /><span class="grid__name">GOG.com</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/microsoft-store/" class="grid__link"><img src="/assets/img/icon-ms-store.png" alt="Microsoft Store" class="grid__img" /><span class="grid__name">Microsoft Store</span></a>
+                </li>
+                <li class="grid__li">
+                  <a href="https://www.instant-gaming.com/es/pc/epic-games/" class="grid__link"><img src="/assets/img/icon-epic.png" alt="Epic" class="grid__img" /><span class="grid__name">Epic</span></a>
+                </li>
+              </ul>
+
+              <div class="submenu__gifts">
+                <a href="https://www.instant-gaming.com/es/tarjetas-prepagadas/pc/" class="submenu__link">Tarjetas regalo</a>
+                <svg class="submenu__arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+              </div>
+              <ul class="submenu__flex flex">
+                <li class="flex__li">
+                  <a href="" class="flex__link"><img src="/assets/img/pc-steam-gift.png" alt="Tarjetas regalo Steam" class="flex__img" /><span class="flex__name">Tarjetas regalo Steam</span></a>
+                </li>
+                <li class="flex__li">
+                  <a href="" class="flex__link"><img src="/assets/img/pc-gift-3.png" alt="Tarjetas regalo IG" class="flex__img" /><span class="flex__name">Tarjetas regalo IG</span></a>
+                </li>
+                <li class="flex__li">
+                  <a href="" class="flex__link"><img src="/assets/img/pc-blizzard-gift.png" alt="Tarjetas regalo Blizzard" class="flex__img" /><span class="flex__name">Tarjetas regalo Blizzard</span></a>
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="menu__login login">
